deploy/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-host
spec:
  type: ClusterIP
  selector:
    app: simple-host
  ports:
    - name: http
      port: 80
      targetPort: application
